@startuml
' Définir les classes

class Utilisateur {
    - ID_Utilisateur : int (PK)
    - Nom : string
    - Prénom : string
    - Email : string
    - Mot_de_passe : string
    - Date_inscription : date
    - Statut : string
    - Rôle : string (Utilisateur, Administrateur)
    + créerCompte()
    + modifierProfil()
    + réinitialiserMotDePasse()
    + configurerExerciceRespiration()
}

class Exercice_Respiration {
    - ID_Exercice : int (PK)
    - Nom : string
    - Durée_inspiration : int
    - Durée_apnée : int
    - Durée_expiration : int
    - Description : string
    + lancerExercice()
}

class Historique_Exercice {
    - ID_Historique : int (PK)
    - Date_effectué : datetime
    - Durée_totale : int
    + enregistrerHistorique()
}

class Information {
    - ID_Information : int (PK)
    - Titre : string
    - Contenu : string
    - Date_creation : date
    - Date_modification : date
    + modifierInformation()
}

' Définir les relations

Utilisateur "1" --> "0..*" Exercice_Respiration : Configure
Utilisateur "1" --> "0..*" Historique_Exercice : Effectue
Exercice_Respiration "1" --> "0..*" Historique_Exercice : Fait partie de
Utilisateur "1" --> "0..*" Information : Modifie

@enduml